2000-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime.el (mime-entity-media-type): Add DOC.
	(mime-entity-media-subtype): Add DOC.
	(mime-entity-parameters): Add DOC.
	(mime-entity-type/subtype): Add DOC.

	* FLIM-API.en: Add some usages.
	(mime-entity-media-type): New description.
	(mime-entity-media-subtype): Likewise.
	(mime-entity-type/subtype): Likewise.
	(mime-entity-parameters): Likewise.

2000-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* eword-encode.el (eword-encode-text): Specify `mode' of
	`encoded-text-encode-string'.

	* mel.el (encoded-text-encode-string): Add optional argument
	`mode'; use `base64-encode-string' directly for "B"-encoding.

2000-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* FLIM-API.en: Renamed from FLIM-1.14-API.en; reordered and add
	some sections.

	* mime.el (mime-entity-set-content-type): Add DOC.
	(mime-entity-set-encoding): Add DOC.

	* mime-def.el (mime-content-type-subtype): Fix DOC.
	(mime-content-type-parameters): Fix DOC.

2000-12-19  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* FLIM-1.14-API.en: New file.

	* smtp.el (smtp-open-connection-function): Add autoload cookie.

	* qmtp.el (qmtp-open-connection-function): Add autoload cookie.

	* mime.el (mime-entity-children): Add DOC.
	(mime-entity-node-id): Add DOC.
	(mime-entity-content-type): Add DOC.
	(mime-entity-content-disposition): Add DOC.
	(mime-entity-encoding): Add DOC.

2000-12-19  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime.el (mime-encode-field-body): Add autoload setting.

	* eword-encode.el (mime-encode-field-body): Renamed from
	`eword-encode-field-body'; declare `eword-encode-field-body' as
	obsolete alias.
	(mime-encode-header-in-buffer): Use `mime-encode-field-body'
	instead of `eword-encode-field-body'.

2000-12-19  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime.el (mime-encode-header-in-buffer): Renamed from
	`eword-encode-header'.

	* mmdbuffer.el: Deleted.
