@@ -895,17 +895,15 @@ If BOUNDARY is not nil, it is used as message header separator.
 ** Features
 
 [Function] smtp-send-buffer (sender recipients buffer)
-  (This description will be written by Daiki Ueno <ueno@unixuser.org>)
+  Send a message.
 
+  SENDER is an envelope sender address.
+  RECIPIENTS is a list of envelope recipient addresses.
+  BUFFER may be a buffer or a buffer name which contains mail message.
 
-* QMTP
+  [Suggest]
 
-** How to use
+[Function] smtp-via-smtp (sender recipients buffer)
+  Like `smtp-send-buffer', but sucks in any errors.
 
-(require 'qmtp)
-
-
-** Features
-
-[Function] qmtp-send-buffer (sender recipients buffer)
-  (This description will be written by Daiki Ueno <ueno@unixuser.org>)
+  [Optional]<Not Suggest>
